--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <title>Dinosaurs With Hats!</title>
 <body>
-    <img src="./dino_with_hats2.jpg" alt="A dinosaur wearing a hat">
+    <main>
+        <img src="./dino_with_hats2.jpg" alt="A dinosaur wearing a hat">
+    </main>
+
+    <footer>I do not own the rights to this image. It is being used for educational purposes only.</footer>
 </body>
 </html>
